[project]
name = "a1ctf-journalist"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
